Removed properties reader, unnecessary if there is no template engine